--- a/Backend/package.json
+++ b/Backend/package.json
@@ -3,5 +3,8 @@
   "scripts": {
     "start": "node server.js",
     "dev": "nodemon server.js"
+  },
+  "dependencies": {
+    "dotenv": "^17.2.0"
   }
-} 
+}
